# engine

./: CMakeLists.txt  setup.txt
codeGenTool/: targetAddGenerated.cmake
codeGenTool/src/: Config.java  DataFile.java  Lexer.java  Main.java  Parser.java  dataFileCpp.stg  dataFileHpp.stg  shader.stg  todo.txt
dependencies/: building_freetype.txt
dependencies/Json/: JsonPrinter.cpp  JsonValue.cpp  JsonValue.hpp
dependencies/imgui/: imconfig.h  imgui_impl_glfw.cpp  imgui_stdlib.cpp  imgui_stdlib.h
dependencies/opengl/: gl.h
dependencies/stb_vorbis/: stb_vorbis.cpp  stb_vorbis.hpp
engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  EngineUpdateLoop.cpp  EngineUpdateLoop.hpp  Log.hpp  Window.cpp  Window.hpp
engine/Audio/: Audio.cpp  Audio.hpp  AudioBuffer.cpp  AudioBuffer.hpp  AudioErrorHandling.cpp  AudioErrorHandling.hpp  AudioFileStream.cpp  AudioFileStream.hpp  AudioFormat.cpp  AudioFormat.hpp  AudioSource.cpp  AudioSource.hpp
engine/Graphics/: Fbo.cpp  Ibo.cpp  Ibo.hpp  Shader.cpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  Texture1d.cpp  Texture1d.hpp  Vao.cpp  Vao.hpp  Vbo.cpp  Vbo.hpp
engine/Input/: Input.cpp  Input.hpp  InputUtils.cpp  InputUtils.hpp  KeyCode.hpp
engine/Math/: Aabb.cpp  Aabb.hpp  Aabb3.cpp  Aabb3.hpp  Angles.cpp  Angles.hpp  Box3.cpp  Box3.hpp  Circle.cpp  Circle.hpp  Color.cpp  Color.hpp  ComplexPolygonOutline.cpp  ComplexPolygonOutline.hpp  Constants.hpp  Derivative.hpp  DouglassPecker.cpp  DouglassPecker.hpp  Frustum.cpp  Frustum.hpp  GramSchmidt.cpp  GramSchmidt.hpp  Interpolation.cpp  Interpolation.hpp  Intersections.cpp  Intersections.hpp  Lerp.hpp  Line.cpp  Line.hpp  LineSegment.cpp  LineSegment.hpp  MarchingSquares.cpp  MarchingSquares.hpp  Mat2.hpp  Mat3.hpp  Mat4.hpp  Plane.cpp  Plane.hpp  PointInShape.cpp  PointInShape.hpp  (+21 more)
engine/Math/OdeIntegration/: Euler.hpp  Midpoint.hpp  OdeRhsFunction.hpp  RungeKutta4.hpp
engine/Utils/: Array2d.hpp  Assertions.cpp  Assertions.hpp  CrashReport.cpp  CrashReport.hpp  Dbg.hpp  FileIo.cpp  FileIo.hpp  FixedSizeStringStream.hpp  FixedUpdateLoop.cpp  FixedUpdateLoop.hpp  Gui.cpp  Gui.hpp  HashCombine.cpp  HashCombine.hpp  Image32.cpp  Image32.hpp  Json.cpp  Json.hpp  JsonFileIo.cpp  JsonFileIo.hpp  List.hpp  PreprocessIncludes.cpp  Put.cpp  SourceGenerator.cpp  SourceGenerator.hpp  Span.hpp  Span2d.hpp  StaticList.hpp  StringStream.cpp  StructUtils.hpp  Timer.cpp  Timer.hpp  Unwrap.hpp  Utf8.cpp  Utf8.hpp  View.hpp  View2d.hpp
exampleProject/: CMakeLists.txt
gfx/: CMakeLists.txt  Instancing.hpp  ShaderManager.cpp  ShaderManager.hpp  TextureAtlasGenerator.cpp  sdf.glsl
gfx2d/: CMakeLists.txt  Camera.cpp  Camera.hpp  CameraUtils.cpp  CameraUtils.hpp  DbgGfx2d.cpp  DbgGfx2d.hpp  Gfx2d.cpp  Gfx2d.hpp  Quad2dPt.cpp  Quad2dPt.hpp  Vertex2dPt.data  Vertex2dPtData.hpp
gfx2d/FontRendering/: Font.cpp  Font.data  Font.hpp  FontData.hpp  FontRenderer.cpp  FontRenderer.hpp
gfx2d/Shaders/: basicText.data  basicText.frag  basicText.vert  basicTextData.hpp  circle.data  circle.frag  circleData.hpp  disk.data  disk.frag  disk.vert  diskData.hpp  filledTriangle.data  filledTriangle.frag  filledTriangle.vert  filledTriangleData.hpp  line.data  line.frag  line.vert  lineData.hpp
